--- a/index.html
+++ b/index.html
@@ -3,21 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | QR code component</title>
-
 </head>
+
 <body>
+ <main class="main">
 
-  Improve your front-end skills by building projects
+  <figure>
+    <img alt="Frontend Mentor QR code" src="images/image-qr-code.png">
+  </figure>
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+  <section class="main-section">
+    <h2>Improve your front-end skills by building projects</h2>
+    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+  </section>
+
+ </main>  
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/SHMITEnZ">SHMITEnZ</a>.
   </div>
 </body>
 </html>
